apps/infra/traefik/overlays/infra/resources/chains.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: chain-basic-auth
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/name: traefik
spec:
  chain:
    middlewares:
      - name: basicauth
      - name: headers
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: chain-traefik-dashboard
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/name: traefik
spec:
  chain:
    middlewares:
      - name: traefik-dashboard-auth
      - name: headers
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: longhorn-dashboard
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/name: traefik
spec:
  chain:
    middlewares:
      - name: traefik-dashboard-auth
      - name: svc-longhorn-headers
